# nomos-node

./: .cargo-deny.toml  .env.devnet  .env.testnet  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.devnet.run.yml  compose.devnet.setup.yml  compose.run.yml  compose.setup.yml  compose.static.yml  compose.yml  flake.nix  rust-toolchain.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: release-candidate.md  release.md
.github/actions/run-cucumber-suite/: action.yml
.github/actions/setup-cargo-cache/: action.yml
.github/actions/update-cargo-cache/: action.yml
.github/release/: rc-disclaimer.md  release-content.md
.github/workflows/: build-logos-tools.yml  code-check.yml  codecov.yml  cucumber-integration-tests.yml  end-to-end-integration-tests.yml  end-to-end-with-cucumber.yml  genesis-ceremony.yml  nightly-cargo-hack.yml  nightly-cluster-fork-detector.yml  pr.yml  prepare-release.yml  publish-node-image.yml  publish-testnet-base-image.yml  publish-testnet-nomos-image.yml  rust-latest-version-check.yml  tmp-codecov.yml
blend/crypto/src/: merkle.rs
blend/message/: Cargo.toml
blend/message/src/: codec.rs  error.rs  lib.rs
blend/network/: Cargo.toml
blend/scheduling/src/: cover_traffic.rs  epoch.rs  lib.rs  membership.rs  release_delayer.rs  stream.rs
c-bindings/: Cargo.toml
c-bindings/src/: errors.rs  lib.rs  logging.rs  macros.rs  node.rs  pointers.rs
c-bindings/src/api/: blend.rs  config.rs  cryptarchia.rs  keys.rs  leader.rs  lifecycle.rs  memory.rs  mod.rs  peer.rs  sdp.rs  storage.rs  subscriptions.rs  wallet.rs
ci/: Dockerfile  Jenkinsfile.nightly.integration
consensus/cryptarchia-engine/: Cargo.toml
consensus/cryptarchia-engine/src/: lib.rs  time.rs
core/: Cargo.toml
core/benches/: mantle_tx_components.rs
core/macros/: Cargo.toml
core/macros/src/: lib.rs
core/src/: lib.rs
core/src/blend/: mod.rs
core/src/block/: deser.rs  genesis.rs  mod.rs
core/src/events/: mod.rs
core/src/header/: mod.rs
core/src/mantle/: channel.rs  encoding.rs  genesis_tx.rs  ledger.rs  mock.rs  mod.rs  tx.rs  tx_builder.rs
core/src/proofs/: channel_multi_sig_proof.rs  leader_claim_proof.rs  leader_proof.rs
core/src/sdp/: blend.rs  mod.rs
core/src/utils/: merkle.rs  mod.rs
deployment/: .env.devnet  .env.testnet  Dockerfile  README.md  cfgsync.yaml  compose.run.yml  compose.setup.yml  compose.tracing.yml  compose.yml
deployment/cfgsync/: deployment-settings.yaml
deployment/cfgsync/src/: repo.rs
deployment/faucet/: Cargo.toml
deployment/faucet/src/: faucet.rs  server.rs
deployment/l2-sequencer-archival-demo/: README.md
deployment/nginx/: run.conf
deployment/scripts/: cleanup_node_data.sh  run_faucet.sh  run_nginx.sh  run_node.sh
deployment/tracing/: filebrowser.json
deployment/tui-zone/: Cargo.toml  README.manual-demo.md
deployment/tui-zone/src/: cli.rs  lib.rs  main.rs  message.rs  state.rs  ui.rs
kms/keys/: Cargo.toml
kms/operators/: Cargo.toml
ledger/src/: config.rs  lib.rs
ledger/src/cryptarchia/: block_density.rs  mod.rs  stake.rs
ledger/src/mantle/: helpers.rs  leader.rs  mod.rs
mmr/src/: lib.rs
nodes/api-common/: Cargo.toml
nodes/api-common/src/: lib.rs  paths.rs  pprof.rs  queries.rs
nodes/node/: standalone-deployment-config.yaml  standalone-node-config.yaml
nodes/node/binary/: Cargo.toml  build.rs
nodes/node/genesis/: genesis_block.yaml
nodes/node/http-client/: Cargo.toml
nodes/nomos-node-api/: Cargo.toml
nomos-cli/: Cargo.toml
nomos-da/network/core/: Cargo.toml
nomos-services/time/: Cargo.toml
scripts/: setup-logos-blockchain-circuits.sh  setup-logos-core.sh  standalone-genesis-ceremony.sh
services/api/: Cargo.toml
services/api/src/: lib.rs
services/blend/: Cargo.toml
services/key-management-system/: Cargo.toml
services/sdp/src/: lib.rs  (+1 more)
services/storage/: Cargo.toml
services/system-sig/: Cargo.toml
services/time/: Cargo.toml
services/tracing/: Cargo.toml
services/tx-service/: 1780643362  Cargo.toml
services/utils/: Cargo.toml
services/wallet/: Cargo.toml
testnet/: Dockerfile  Dockerfile.base  Dockerfile.nomos  bootstrap_config.yaml  compose.tracing.yml  ghost-config.yml  libp2p_config.yaml  nomos-static-testnet.service
testnet/cfgsync/: Cargo.toml
testnet/nginx/: setup.conf
testnet/scripts/: run_ghost.sh  run_node.sh  setup_cfgsync_client.sh  setup_cfgsync_server.sh
testnet/tui-zone/: Cargo.toml
tests/: Cargo.toml  README.md
tests/cucumber_tests/: cucumber.rs
tools/blockchain-tools/: Cargo.toml
tools/config/: Cargo.toml
tracing/: Cargo.toml
tracing/src/: lib.rs
utils/: Cargo.toml
utils/src/: bounded_vec.rs  lib.rs  yaml.rs
utxotree/src/: merkle.rs
wallet/: Cargo.toml
wallet/src/: error.rs  lib.rs  voucher.rs
zk/circuits/prover/: Cargo.toml
zk/circuits/prover/src/: lib.rs  rapidsnark.rs  traits.rs
zk/circuits/verifier/: Cargo.toml
zk/circuits/verifier/src/: lib.rs  rapidsnark.rs  wrappers.rs
zk/groth16/: Cargo.toml
zk/proofs/poc/: Cargo.toml
zk/proofs/poc/benches/: prove.rs
zk/proofs/poc/src/: inputs.rs  lib.rs  wallet_inputs.rs  witness.rs
zk/proofs/poc/src/proving_key/: mod.rs
zk/proofs/poc/src/verification_key/: mod.rs
zk/proofs/pol/: Cargo.toml
zk/proofs/pol/benches/: prove.rs
zk/proofs/pol/src/: inputs.rs  lib.rs  wallet_inputs.rs  witness.rs
zk/proofs/pol/src/proving_key/: mod.rs
zk/proofs/pol/src/verification_key/: mod.rs
zk/proofs/poq/: Cargo.toml
zk/proofs/poq/benches/: prove.rs
zk/proofs/poq/src/: blend_inputs.rs  chain_inputs.rs  common_inputs.rs  inputs.rs  lib.rs  wallet_inputs.rs  witness.rs
zk/proofs/poq/src/proving_key/: mod.rs
zk/proofs/poq/src/verification_key/: mod.rs
zk/proofs/zksign/: Cargo.toml
zk/proofs/zksign/benches/: prove.rs
zk/proofs/zksign/src/: inputs.rs  lib.rs  public.rs  witness.rs
zk/proofs/zksign/src/proving_key/: mod.rs
zk/proofs/zksign/src/verification_key/: mod.rs
zone-sdk/: BRIDGING.md  Cargo.toml  DECENTRALIZED_SEQUENCING.md
zone-sdk/src/: adapter.rs  indexer.rs  lib.rs  sequencer.rs  state.rs
(+527 files in other folders)
