[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-core-macros"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
proc-macro = true

[dependencies]
hex         = { features = ["alloc"], workspace = true }
proc-macro2 = { features = ["proc-macro"], workspace = true }
quote       = { workspace = true }
syn         = { features = ["clone-impls", "derive", "full", "parsing", "printing", "proc-macro"], workspace = true }

[lints]
workspace = true
