[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-circuits-prover"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
lbc-rapidsnark-sys = { features = ["prebuilt"], workspace = true }
tempfile           = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tempfile"] # machete hallucinations
