[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-circuits-verifier"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
rust-rapidsnark = { features = ["static-rapidsnark"], workspace = true }

[lints]
workspace = true
