[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-zksign"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
lb-circuits-prover = { workspace = true }
lb-circuits-utils  = { workspace = true }
lb-groth16         = { workspace = true }
lb-poseidon2       = { workspace = true }
lbc-signature-sys  = { features = ["prebuilt"], workspace = true }
lbc-types          = { workspace = true }
lbp-error          = { workspace = true }
num-bigint         = { workspace = true }
serde              = { features = ["derive"], workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
divan        = { workspace = true }
lb-poseidon2 = { workspace = true }
num-bigint   = { workspace = true }
rand         = { workspace = true }

[build-dependencies]
lb-circuits-utils = { workspace = true }

[[bench]]
harness = false
name    = "prove"

[lints]
workspace = true
